[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/enviroment/background.png" type="Texture" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/Main.gd" type="Script" id=3]
[ext_resource path="res://apple/apple.tscn" type="PackedScene" id=4]
[ext_resource path="res://hud/hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://powerUps/GoldenApplepple.tscn" type="PackedScene" id=6]
[ext_resource path="res://wolf/Wolf.tscn" type="PackedScene" id=7]

[node name="Main" type="Node"]
script = ExtResource( 3 )
Apple = ExtResource( 4 )
GoldenApple = ExtResource( 6 )
playTime = 5

[node name="BackGround" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="AppleContainer" type="Node" parent="."]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 221, 292 )

[node name="GameTimer" type="Timer" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 227, 291 )

[node name="WolfStart" type="Position2D" parent="."]
position = Vector2( 229, 468 )

[node name="Wolf" parent="." instance=ExtResource( 7 )]
position = Vector2( 223, 464 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="PowerUpTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
